# dintero-rust-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: release.yml
.zed/: tasks.json
dintero/: Cargo.toml
dintero-accounts/: Cargo.toml
dintero-accounts/src/: account.rs  auth.rs  client.rs  clients.rs  error.rs  gateways.rs  lib.rs  locations.rs  partners.rs  types.rs  users.rs
dintero-checkout/: Cargo.toml
dintero-checkout/src/: api_keys.rs  client.rs  credit_checks.rs  lib.rs  qr_codes.rs  secrets.rs
dintero-checkout/src/card_tokens/: mod.rs  operations.rs  types.rs
dintero-checkout/src/sessions/: mod.rs  operations.rs  profiles.rs  types.rs
dintero-checkout/src/transactions/: operations.rs  types.rs
dintero-insights/: Cargo.toml
dintero-insights/src/: client.rs  kpis.rs  lib.rs  report_configs.rs  reports.rs  types.rs
dintero-loyalty/: Cargo.toml
dintero-loyalty/src/: automations.rs  client.rs  customers.rs  discounts.rs  error.rs  lib.rs  locations.rs  products.rs  receipts.rs  types.rs  wallets.rs  webhooks.rs
dintero-orders/: Cargo.toml
dintero-orders/src/: authorizations.rs  cancellations.rs  captures.rs  client.rs  comments.rs  drafts.rs  events.rs  lib.rs  refunds.rs  sessions.rs
dintero-orders/src/orders/: mod.rs  operations.rs  types.rs
dintero-payments/: Cargo.toml
dintero-payments/src/: client.rs  fund_transfers.rs  lib.rs  payouts.rs  sellers.rs  settlements.rs  transactions.rs
dintero/examples/: accounts.rs  accounts_basic.rs  accounts_management.rs  basic.rs  checkout_session.rs  from_env.rs  insights.rs  loyalty.rs  orders.rs  orders_comprehensive.rs  payments.rs  transaction_operations.rs
dintero/src/: auth.rs  checkout_adapter.rs  client.rs  config.rs  error.rs  lib.rs
dintero/src/adapters/: accounts.rs  checkout.rs  insights.rs  loyalty.rs  mod.rs  orders.rs  payments.rs
dintero/src/types/: address.rs  metadata.rs  mod.rs  money.rs  pagination.rs
