[package]
name = "dintero-accounts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Accounts API implementation for Dintero SDK"

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
