[package]
name = "dintero-checkout"
version = "0.1.0"
edition = "2021"
publish = false
description = "Internal implementation crate for Dintero Checkout API"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
