[package]
name = "dintero-insights"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Insights API implementation for Dintero SDK"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio-test.workspace = true
