[package]
name = "dintero-loyalty"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Loyalty API implementation for Dintero SDK"

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true
