[package]
name = "dintero-orders"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Orders API implementation for Dintero SDK"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
tokio-test.workspace = true
